force-app/main/default/objects/Betreiber__c/Betreiber__c.object-meta.xml
<CustomObject>
    <label>Betreiber</label>
    <nameField>
        <label>Betreiber-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Betreiber</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>