force-app/main/default/objects/Betreiber__c/fields/Betreiber_Logo__c.field-meta.xml
<CustomField>
    <fullName>Betreiber_Logo__c</fullName>
    <label>Betreiber Logo</label>
    <type>Url</type>
</CustomField>