force-app/main/default/objects/Betreiber__c/fields/PLZ__c.field-meta.xml
<CustomField>
    <fullName>PLZ__c</fullName>
    <label>PLZ</label>
    <length>10</length>
    <type>Text</type>
</CustomField>