force-app/main/default/objects/Betreiber__c/fields/Stadt__c.field-meta.xml
<CustomField>
    <fullName>Stadt__c</fullName>
    <label>Stadt</label>
    <length>55</length>
    <type>Text</type>
</CustomField>